maven artifacts upgrade